feat: add GetUser
